# donto-memory

./: .gitignore  Cargo.toml  INTEGRATION-PATTERNS.md  LICENSE  README.md
crates/donto-memory/: Cargo.toml
crates/donto-memory-core/: Cargo.toml
crates/donto-memory-core/src/: config.rs  delta.rs  extract.rs  fusion.rs  hot_path.rs  lib.rs  module.rs  overlays.rs  sleep_path.rs  substrate.rs  types.rs
crates/donto-memory-core/src/modules/: episodic.rs  mod.rs  preference.rs  semantic_claim.rs
crates/donto-memory-core/tests/: integration.rs
crates/donto-memory/assets/: agent.md  docs.html  explore.html  index.html  integration-patterns.md
crates/donto-memory/src/: lib.rs  main.rs
crates/donto-memory/src/api/: cache.rs  docs.rs  extract.rs  job_log.rs  mod.rs  openapi.rs  ops_auth.rs
crates/donto-memory/src/api/routes/: explore.rs  health.rs  ingest.rs  jobs.rs  memorize.rs  mod.rs  modules.rs  recall.rs  reconsolidate.rs  search.rs
crates/donto-memory/tests/: api_integration.rs
deploy/: Caddyfile.snippet  Dockerfile  donto-memory-api.service  donto-memory-worker.service  env.example
migrations/: 0001_memory_overlays.sql  0002_job_log.sql
ops/: donto-memory-worker.service  fts-name-index.sql
tests/system/: e2e-recall-tool.mjs  search-systest.sh
worker/: README.md  activities.py  extraction.py  opencode_agent.py  requirements.txt  worker.py  workflows.py
