[package]
name         = "donto-memory"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "donto-memory binary — API server, sleep-path worker, and CLI."

[lib]
name = "donto_memory"
path = "src/lib.rs"

[[bin]]
name = "donto-memory"
path = "src/main.rs"

[dependencies]
donto-memory-core   = { path = "../donto-memory-core" }

tokio              = { workspace = true }
tokio-util         = { workspace = true }
async-trait        = { workspace = true }
futures            = { workspace = true }

axum               = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true }

deadpool-postgres  = { workspace = true }
reqwest            = { workspace = true }

serde              = { workspace = true }
serde_json         = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
sha2               = { workspace = true }
hex                = { workspace = true }

clap               = { workspace = true }
dotenvy            = { workspace = true }

thiserror          = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
http-body-util = "0.1"
